p2/confs/service.yaml
# Service: svc-app1
apiVersion: v1
kind: Service
metadata:
  name: svc-app1
spec:
  selector:
    app: app1 # Selectionne les pods avec le label app=app1
  ports:
    - protocol: TCP
      port: 8080 # Port exposé par le service
      targetPort: 80 # Port du container

---
# Service: svc-app2
apiVersion: v1
kind: Service
metadata:
  name: svc-app2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
# Service: svc-app3
apiVersion: v1
kind: Service
metadata:
  name: svc-app3
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
