p2/confs/ingress.yaml
# Ingress pour diriger les requêtes http vers les services (app1.com, app2.com, app3.com)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
spec:
  rules:
  - host: app1.com # Nom de domaine
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-app1 # Service backend pour app1
            port:
              number: 8080
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-app2
            port:
              number: 8080
  - host: app3.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-app3
            port:
              number: 8080
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-app3
            port:
              number: 8080
